fix logout button align

--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -3,13 +3,12 @@
   width: 100%;
   flex: calc(1 / 3);
 
+
 }
 
 .homewrapper {
-  position: fixed;
-  top: 20%;
-  left: 65%;
-  width: 18%;
+  position: -webkit-sticky;
+  position: sticky;
 }
 
 .rightbarWrapper {
