--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -267,4 +267,9 @@
     opacity: 1;
 
   }
+
+
+  li.logout button {
+    padding-left: 0px;
+  }
 }
